Se agregó una nueva sección de donaciones en la invitación (Invitacion_XV/invitacion.html) con imagen y mensaje para sugerir un detalle en efectivo. Se añadió la imagen img11.jpeg para ilustrar la sección de donaciones. Se actualizaron los estilos en styles.css para la nueva sección .donacion y su imagen, incluyendo estilos responsivos.

--- a/Invitacion_XV/invitacion.html
+++ b/Invitacion_XV/invitacion.html
@@ -10,7 +10,7 @@
   <div class="inv-xv-container">
     <!-- Portada con imagen principal -->
     <section class="portada">
-      <img src="/imagenes/img1.jpeg" alt="Portada XV" class="img-portada">
+      <img src="imagenes/img1.jpeg" alt="Portada XV" class="img-portada">
       <div class="portada-texto">
         <h2>MIS XV AÑOS</h2>
         <h1>Briana Alejandra Mayorga Jofre</h1>
@@ -48,6 +48,16 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <!-- Mensaje de donaciones-->
+    <section class="donacion">
+      <img src="imagenes/img11.jpeg" alt="Donacion" class="img-donacion">
+      <h2>🎀Un detalle con cariño🎀</h2>
+      <p>Tu presencia es el mejor regalo,
+        pero… ¿no sabes qué regalar? ¡No hay problema!
+        Habrá una cajita especial
+        donde podrás dejar un detalle en efectivo 💕✨</p>
     </section>
 
     <!-- Registro de asistencia -->
